--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
         <!-- EXCHANGES -->
         <dependency>
             <groupId>org.knowm.xchange</groupId>
@@ -323,11 +335,6 @@
         <dependency>
             <groupId>org.knowm.xchange</groupId>
             <artifactId>xchange-gateio</artifactId>
-            <version>4.3.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.knowm.xchange</groupId>
-            <artifactId>xchange-gdax</artifactId>
             <version>4.3.10</version>
         </dependency>
         <dependency>
