--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>demo</name>
-    <description>Demo project for Spring Boot</description>
+    <name>CryptoTickerService</name>
+    <description>REST API to get any ticker from exchanges covered by XChange project</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -81,6 +81,11 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jersey2-jaxrs</artifactId>
+            <version>LATEST</version>
         </dependency>
         <!-- EXCHANGES -->
         <dependency>
