--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,13 @@
 language: java
 jdk: oraclejdk8
+
+sudo: required
+
+services:
+- docker
+
+deploy:
+  provider: script
+  script: bash docker_push
+  on:
+    branch: master
