--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jersey2-jaxrs</artifactId>
-            <version>LATEST</version>
+            <version>1.5.21</version>
         </dependency>
         <!-- EXCHANGES -->
         <dependency>
