adding support for templates (index/error/etc.) : content still to come

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     name: CryptoTickerService
 server:
   port: 8081
+  error:
+    whitelabel:
+      enabled: false
 logging:
   level:
     si.mazi.rescu: ERROR
