--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,16 @@ logging:
   level:
     si.mazi.rescu: ERROR
     root: INFO
-
+info:
+  app:
+    name: CryptoTickerService
+    description: REST endopint giving access to tickers on crypto exchanges supported by XChange project
+    version: 0.1 (alpha)
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
