adding MIT license information

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
     <name>CryptoTickerService</name>
     <description>REST API to get any ticker from exchanges covered by XChange project</description>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
