--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ sudo: required
 services:
   - docker
 
-deploy:
-  provider: script
-  script: bash docker_push
-  on:
-    branch: master
+before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+#deploy:
+#  provider: script
+#  script: bash docker_push
+#  on:
+#    branch: master
