--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ services:
 
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-#deploy:
-#  provider: script
-#  script: bash docker_push
-#  on:
-#    branch: master
+
+deploy:
+  provider: script
+  script: bash docker_push
+  on:
+    branch: master
